# Bookie

./: .gitignore  LICENSE  README.md
dna/: Cargo.toml
dna/bookie.dna.workdir/: dna.json
dna/tests/: package.json
dna/tests/src/: index.ts
dna/zomes/calendar_events/: Cargo.toml
dna/zomes/calendar_events/src/: lib.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/resource_bookings/: Cargo.toml
dna/zomes/resource_bookings/src/: lib.rs
ui/: .eslintrc.js  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.vue  client.ts  main.ts
ui/src/components/: HelloWorld.vue
