[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "calendar_events"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "calendar_events"

[dependencies]
derive_more = "0"
serde = "1"

calendar_events = {git = "https://github.com/holochain-open-dev/calendar-events-module", package = "calendar_events"}
hdk3 = {git = "https://github.com/holochain/holochain", package = "hdk3"}
