[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "resource_bookings"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "resource_bookings"

[dependencies]
derive_more = "0"
serde = "1"

hdk3 = {git = "https://github.com/holochain/holochain", package = "hdk3"}

resource_bookings = {git = "https://github.com/holochain-open-dev/resource-bookings-module", package = "resource_bookings"}
